@@ -7,7 +7,8 @@ RTML.pm
 t/rtml.t
 t/build.t
 t/parse.t
-t/debugging.t
+observation.pl
+server.pl
 Build/Makefile.PL
 Build/Build.pm
 Parse/Makefile.PL
